corpus/less.txt
============================
Less @import
============================
@import "http://foo.bar";

a {
  b: '';
  @import (inline, once) "foo.bar";
  c: '\'hi\'';
}

---

(doc
  (import_statement (reference))
  (string)
  (import_statement
    (less_keywords (less_keyword) (less_keyword))
    (reference)
  )
  (string)
)
