corpus/sass.txt
==============================
SASS @import
==============================
@import 'custom.css'
@import url("chrome://communicator/skin/")
@import 'foundation/code', 'foundation/lists'
@import "common.css" screen
@import url("fineprint.css") print
---
(doc
  (import_statement (reference))
  (import_statement (reference))
  (import_statement (reference) (reference))
  (import_statement (reference))
  (import_statement (reference))
)

==============================
SASS @use
==============================
@use 'custom.css'

.inverse
  background-color: base.$primary-color
  color: white
---
(doc
  (import_statement (reference))
)

==============================
SASS @forward
==============================
@forward 'custom.css'
---
(doc
  (import_statement (reference))
)
