corpus/scss.txt
==============================
SCSS @import
==============================
@import 'custom.css';
@import url("chrome://communicator/skin/");
@import 'foundation/code', 'foundation/lists';
@import "common.css" screen;
@import url("fineprint.css") print;
---
(doc
  (import_statement (reference))
  (import_statement (reference))
  (import_statement (reference) (reference))
  (import_statement (reference))
  (import_statement (reference))
)

==============================
SCSS @use
==============================
@use 'custom.css';

.inverse {
  background-color: base.$primary-color;
  color: white;
}
---
(doc
  (import_statement (reference))
)

==============================
SCSS @forward
==============================
@forward 'custom.css';
---
(doc
  (import_statement (reference))
)
